--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div id="rights">
         Designed and developed by
-        <a href="https://www.linkedin.com/in/mohammad-zefri/" target="_blank" class="f-logo">MZ</a>
+        <a href="#" target="_blank" class="f-logo">MZ</a>
         <a class="q" href="https://github.com/cinerelan/german-article?tab=readme-ov-file#german-article-a1-a2-b1" target="_blank">How to use the app?</a>
     </div>
 
